# ctrnn-jax

./: .gitignore  .pre-commit-config.yaml  README.md  chaos.py  hopfield.py  limit_cycle.py  model.py  pyproject.toml  switch.py
ctrnn_jax/: analyses.py  fixed_points.py  initializers.py  model.py  pca.py  tasks.py  training.py
scripts/: README.md  analysis_ctrnn.py  dynamics_CTRNN.ipynb  dynamics_ctrnn.ipynb  dynamics_ctrnn.py  dynamics_of_CTRNN.ipynb  dynamics_of_CTRNN.py  fixed_points_ctrnn.py  pca_ctrnn.py  train_CTRNN.ipynb  train_ctrnn.py
tests/: test_model.py  test_tasks.py
