[tool.poetry]
name = "ctrnn-jax"
version = "0.1.0"
description = "An implementation of continuous-time recurrent neural networks in the Jax ecosystem"
authors = ["Keith T. Murray <murraykeith64@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
jax = "0.4.31"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
