[tool.poetry]
name = "ctrnn-jax"
version = "0.1.0"
description = "An implementation of continuous-time recurrent neural networks in the Jax ecosystem"
authors = ["Keith T. Murray <murraykeith64@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
jax = "0.4.31"
pylint = "^3.2.6"
pytest = "^8.3.2"
black = "^24.8.0"
flax = "^0.9.0"
jupyterlab = "^4.2.5"
matplotlib = "^3.9.2"
clu = "^0.0.12"
tensorflow = "^2.17.0"
tqdm = "^4.66.5"
scikit-learn = "^1.6.0"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88